<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appbusters.robinkamboj.androidtesting.main_screen.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:gravity="center"
            android:text="@string/test_list_header"
            android:background="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/one_text_test"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/text_test_button"
            android:onClick="onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/two_recycler_test"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/recycler_test_button"
            android:onClick="onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/three_async_task_test"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/async_task_test_button"
            android:onClick="onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/four_thread_test"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/thread_test_button"
            android:onClick="onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/five"
            android:onClick="onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/six"
            android:onClick="onClick"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
