<resources>
    <string name="app_name">Android Testing</string>
    <string name="test_list_header">Tests List</string>
    <string name="text_test_header">Text Test Screen</string>
    <string name="recycler_test_header">Recycler Test Screen</string>
    <string name="async_task_test_header">Async Task Screen</string>
    <string name="thread_test_header">Thread Test Screen</string>
    <string name="one_text_test">Test Text Change</string>
    <string name="two_recycler_test">Check RecyclerView Item</string>
    <string name="three_async_task_test">Check AsyncTask Result</string>
    <string name="four_thread_test">Check Thread Result</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="go_back_to_main">Go Back To Home Screen</string>
    <string name="dummy_text">This is the old text :(</string>
    <string name="thread_resume_text">This is the new text :)</string>
    <string name="click_to_verify_text">Click To Verify Text</string>
    <string name="text_verified">Text Verified</string>
    <string name="type_robin">type ROBIN then VERIFY</string>
</resources>
