<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center"
        android:text="@string/recycler_test_header"
        android:background="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize"
        android:id="@+id/recycler"/>

</android.support.design.widget.CoordinatorLayout>
